lalr_logicparser/v12/y.output

state 0
	$accept: .top $end 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 12
	.  error

	top  goto 1
	fmla  goto 2
	term  goto 3
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  fmla.    (1)
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_AND  shift 16
	TOK_OR  shift 17
	TOK_IFF  shift 18
	.  reduce 1 (src line 62)


state 3
	fmla:  term.    (27)
	fmla:  term.relop term 
	fmla:  term.TOK_TILDAEQ term 

	TOK_EQ  shift 21
	TOK_TILDAEQ  shift 20
	TOK_LE  shift 22
	TOK_LT  shift 23
	TOK_GE  shift 24
	TOK_GT  shift 25
	.  reduce 27 (src line 165)

	relop  goto 19

state 4
	term:  TOK_LPAREN.term TOK_RPAREN 
	fmla:  TOK_LPAREN.fmla TOK_RPAREN 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 12
	.  error

	fmla  goto 27
	term  goto 26
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 5
	fmla:  TOK_TRUE.    (31)

	.  reduce 31 (src line 174)


state 6
	fmla:  TOK_FALSE.    (32)

	.  reduce 32 (src line 176)


state 7
	fmla:  TOK_TILDA.fmla 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 12
	.  error

	fmla  goto 28
	term  goto 3
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 8
	fmla:  TOK_FORALL.simplevars TOK_DOT fmla 

	TOK_VARIABLE  shift 31
	.  error

	simplevar  goto 30
	simplevars  goto 29

state 9
	fmla:  TOK_EXISTS.simplevars TOK_DOT fmla 

	TOK_VARIABLE  shift 31
	.  error

	simplevar  goto 30
	simplevars  goto 32

state 10
	aterm:  aterm.TOK_LPAREN terms TOK_RPAREN 
	aterm:  aterm.TOK_COLON SYMBOLx 
	term:  aterm.    (18)

	TOK_LPAREN  shift 33
	TOK_COLON  shift 34
	.  reduce 18 (src line 144)


state 11
	term:  var.    (19)

	.  reduce 19 (src line 147)


state 12
	term:  TOK_OLD.aterm 

	TOK_PRESYMBOL  shift 15
	.  error

	aterm  goto 35
	SYMBOLx  goto 13

state 13
	aterm:  SYMBOLx.    (4)

	.  reduce 4 (src line 81)


state 14
	var:  TOK_VARIABLE.    (7)
	var:  TOK_VARIABLE.TOK_COLON atype 

	TOK_COLON  shift 36
	.  reduce 7 (src line 97)


state 15
	SYMBOLx:  TOK_PRESYMBOL.    (2)

	.  reduce 2 (src line 69)


state 16
	fmla:  fmla TOK_AND.fmla 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 12
	.  error

	fmla  goto 37
	term  goto 3
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 17
	fmla:  fmla TOK_OR.fmla 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 12
	.  error

	fmla  goto 38
	term  goto 3
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 18
	fmla:  fmla TOK_IFF.fmla 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 12
	.  error

	fmla  goto 39
	term  goto 3
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 19
	fmla:  term relop.term 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 41
	TOK_OLD  shift 12
	.  error

	term  goto 40
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 20
	fmla:  term TOK_TILDAEQ.term 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 41
	TOK_OLD  shift 12
	.  error

	term  goto 42
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 21
	relop:  TOK_EQ.    (22)

	.  reduce 22 (src line 155)


state 22
	relop:  TOK_LE.    (23)

	.  reduce 23 (src line 157)


state 23
	relop:  TOK_LT.    (24)

	.  reduce 24 (src line 158)


state 24
	relop:  TOK_GE.    (25)

	.  reduce 25 (src line 159)


state 25
	relop:  TOK_GT.    (26)

	.  reduce 26 (src line 160)


26: shift/reduce conflict (shift 43(0), red'n 27(0)) on TOK_RPAREN
state 26
	term:  TOK_LPAREN term.TOK_RPAREN 
	fmla:  term.    (27)
	fmla:  term.relop term 
	fmla:  term.TOK_TILDAEQ term 

	TOK_RPAREN  shift 43
	TOK_EQ  shift 21
	TOK_TILDAEQ  shift 20
	TOK_LE  shift 22
	TOK_LT  shift 23
	TOK_GE  shift 24
	TOK_GT  shift 25
	.  reduce 27 (src line 165)

	relop  goto 19

state 27
	fmla:  TOK_LPAREN fmla.TOK_RPAREN 
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_RPAREN  shift 44
	TOK_AND  shift 16
	TOK_OR  shift 17
	TOK_IFF  shift 18
	.  error


28: shift/reduce conflict (shift 18(0), red'n 33(9)) on TOK_IFF
state 28
	fmla:  TOK_TILDA fmla.    (33)
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_IFF  shift 18
	.  reduce 33 (src line 178)


state 29
	simplevars:  simplevars.TOK_COMMA simplevar 
	fmla:  TOK_FORALL simplevars.TOK_DOT fmla 

	TOK_COMMA  shift 45
	TOK_DOT  shift 46
	.  error


state 30
	simplevars:  simplevar.    (13)

	.  reduce 13 (src line 126)


state 31
	simplevar:  TOK_VARIABLE.    (9)
	simplevar:  TOK_VARIABLE.TOK_COLON SYMBOLx 

	TOK_COLON  shift 47
	.  reduce 9 (src line 108)


state 32
	simplevars:  simplevars.TOK_COMMA simplevar 
	fmla:  TOK_EXISTS simplevars.TOK_DOT fmla 

	TOK_COMMA  shift 45
	TOK_DOT  shift 48
	.  error


state 33
	aterm:  aterm TOK_LPAREN.terms TOK_RPAREN 
	terms: .    (15)

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 41
	TOK_OLD  shift 12
	.  reduce 15 (src line 133)

	term  goto 50
	aterm  goto 10
	var  goto 11
	terms  goto 49
	SYMBOLx  goto 13

state 34
	aterm:  aterm TOK_COLON.SYMBOLx 

	TOK_PRESYMBOL  shift 15
	.  error

	SYMBOLx  goto 51

state 35
	aterm:  aterm.TOK_LPAREN terms TOK_RPAREN 
	aterm:  aterm.TOK_COLON SYMBOLx 
	term:  TOK_OLD aterm.    (20)

	TOK_LPAREN  shift 33
	TOK_COLON  shift 34
	.  reduce 20 (src line 149)


state 36
	var:  TOK_VARIABLE TOK_COLON.atype 

	TOK_PRESYMBOL  shift 15
	.  error

	atype  goto 52
	SYMBOLx  goto 53

37: shift/reduce conflict (shift 18(0), red'n 34(5)) on TOK_IFF
state 37
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla TOK_AND fmla.    (34)
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_IFF  shift 18
	.  reduce 34 (src line 180)


38: shift/reduce conflict (shift 18(0), red'n 35(4)) on TOK_IFF
state 38
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla TOK_OR fmla.    (35)
	fmla:  fmla.TOK_IFF fmla 

	TOK_AND  shift 16
	TOK_IFF  shift 18
	.  reduce 35 (src line 182)


39: shift/reduce conflict (shift 16(5), red'n 36(0)) on TOK_AND
39: shift/reduce conflict (shift 17(4), red'n 36(0)) on TOK_OR
39: shift/reduce conflict (shift 18(0), red'n 36(0)) on TOK_IFF
state 39
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_IFF fmla 
	fmla:  fmla TOK_IFF fmla.    (36)

	TOK_AND  shift 16
	TOK_OR  shift 17
	TOK_IFF  shift 18
	.  reduce 36 (src line 184)


state 40
	fmla:  term relop term.    (28)

	.  reduce 28 (src line 168)


state 41
	term:  TOK_LPAREN.term TOK_RPAREN 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 41
	TOK_OLD  shift 12
	.  error

	term  goto 54
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 42
	fmla:  term TOK_TILDAEQ term.    (29)

	.  reduce 29 (src line 170)


state 43
	term:  TOK_LPAREN term TOK_RPAREN.    (21)

	.  reduce 21 (src line 151)


state 44
	fmla:  TOK_LPAREN fmla TOK_RPAREN.    (30)

	.  reduce 30 (src line 172)


state 45
	simplevars:  simplevars TOK_COMMA.simplevar 

	TOK_VARIABLE  shift 31
	.  error

	simplevar  goto 55

state 46
	fmla:  TOK_FORALL simplevars TOK_DOT.fmla 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 12
	.  error

	fmla  goto 56
	term  goto 3
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 47
	simplevar:  TOK_VARIABLE TOK_COLON.SYMBOLx 

	TOK_PRESYMBOL  shift 15
	.  error

	SYMBOLx  goto 57

state 48
	fmla:  TOK_EXISTS simplevars TOK_DOT.fmla 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 12
	.  error

	fmla  goto 58
	term  goto 3
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 49
	aterm:  aterm TOK_LPAREN terms.TOK_RPAREN 
	terms:  terms.TOK_COMMA term 

	TOK_RPAREN  shift 59
	TOK_COMMA  shift 60
	.  error


state 50
	terms:  term.    (16)

	.  reduce 16 (src line 136)


state 51
	aterm:  aterm TOK_COLON SYMBOLx.    (6)

	.  reduce 6 (src line 90)


state 52
	var:  TOK_VARIABLE TOK_COLON atype.    (8)

	.  reduce 8 (src line 100)


state 53
	atype:  SYMBOLx.    (3)

	.  reduce 3 (src line 74)


state 54
	term:  TOK_LPAREN term.TOK_RPAREN 

	TOK_RPAREN  shift 43
	.  error


state 55
	simplevars:  simplevars TOK_COMMA simplevar.    (14)

	.  reduce 14 (src line 129)


56: shift/reduce conflict (shift 16(5), red'n 37(0)) on TOK_AND
56: shift/reduce conflict (shift 17(4), red'n 37(0)) on TOK_OR
56: shift/reduce conflict (shift 18(0), red'n 37(0)) on TOK_IFF
state 56
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_IFF fmla 
	fmla:  TOK_FORALL simplevars TOK_DOT fmla.    (37)

	TOK_AND  shift 16
	TOK_OR  shift 17
	TOK_IFF  shift 18
	.  reduce 37 (src line 186)


state 57
	simplevar:  TOK_VARIABLE TOK_COLON SYMBOLx.    (10)

	.  reduce 10 (src line 111)


58: shift/reduce conflict (shift 16(5), red'n 38(0)) on TOK_AND
58: shift/reduce conflict (shift 17(4), red'n 38(0)) on TOK_OR
58: shift/reduce conflict (shift 18(0), red'n 38(0)) on TOK_IFF
state 58
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_IFF fmla 
	fmla:  TOK_EXISTS simplevars TOK_DOT fmla.    (38)

	TOK_AND  shift 16
	TOK_OR  shift 17
	TOK_IFF  shift 18
	.  reduce 38 (src line 188)


state 59
	aterm:  aterm TOK_LPAREN terms TOK_RPAREN.    (5)

	.  reduce 5 (src line 84)


state 60
	terms:  terms TOK_COMMA.term 

	TOK_VARIABLE  shift 14
	TOK_PRESYMBOL  shift 15
	TOK_LPAREN  shift 41
	TOK_OLD  shift 12
	.  error

	term  goto 61
	aterm  goto 10
	var  goto 11
	SYMBOLx  goto 13

state 61
	terms:  terms TOK_COMMA term.    (17)

	.  reduce 17 (src line 138)

Rule not reduced: vars:  var 
Rule not reduced: vars:  vars TOK_COMMA var 

48 terminals, 13 nonterminals
39 grammar rules, 62/16000 states
13 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 80/240000
31 extra closures
145 shift entries, 1 exceptions
31 goto entries
44 entries saved by goto default
Optimizer space used: output 79/240000
79 table entries, 0 zero
maximum spread: 38, maximum offset: 60
